<resources>
    <string name="app_name">QARTA_REMASTERED</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="titulo_main">Prueba de BDD</string>
    <string name="agregar">Agregar</string>
    <string name="placeholder_name">Ingrese el nombre</string>
    <string name="placeholder_direccion">Ingrese la direccion</string>
    <string name="consultar_direccion">Consultar direccion</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="crud_user">Administrador de usuarios</string>
    <string name="rut">Rut</string>
    <string name="nombres">Nombres</string>
    <string name="apellidops">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="email">Correo</string>
    <string name="users">Usuarios</string>
    <string name="locales">Locales</string>
    <string name="consultar_user">Consultar usuario</string>
    <string name="menu">Menu</string>
    <string name="productos">Productos</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="local">Local</string>
    <string name="create_producto">Crear Producto</string>
    <string name="Ciudad">Ciudad</string>
    <string name="userid">User id</string>
    <string name="consultar_precio">Consultar Precio</string>
    <string name="inicio_carrito">0</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="añadir_item">Añadir al carro</string>
    <string name="close">Quitar</string>
    <string name="pagar">Pagar total</string>
    <string name="welcome"> ¡Bienvenido/a a Qarta!</string>
    <string name="scanner">Escanear codigo QR</string>
    <string name="Adminstracion">Administración</string>
    <string name="add_local">Añadir local</string>
    <string name="add_user">Añadir usuario</string>
    <string name="add_producto">Añadir producto</string>
    <string name="password">Password</string>
    <string name="horario">Horario</string>
    <string name="contacto">Contacto(Numero telefonico)</string>
    <string name="logo">Logo(texto provisional)</string>
    <string name="instagram">Instagram</string>
    <string name="confirmar_pedido">Confirmar pedido</string>
    <string name="total_pago">Total a pagar: $</string>
    <string name="_0_0">0</string>
    <string name="ver_cocina">Ver cocina</string>
    <string name="Local">Local</string>
    <string name="add_mesa">Agregar mesa</string>
    <string name="numero_mesa">Numero de la mesa</string>
    <string name="pedidos_pendientes">Pedidos pendientes</string>
    <string name="Cocinar_producto">Cocinar producto</string>
    <string name="Pedido_confirmado">Pedido confirmado</string>
    <string name="Volver">Volver al menu</string>
</resources>