<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titulo_main"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:autofillHints="@string/nombre"/>

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/placeholder_name"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre"/>

        <TextView
            android:id="@+id/Precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/placeholder_direccion"
            android:labelFor="@+id/dir"
            android:hint="@string/direccion"/>

        <TextView
            android:id="@+id/City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ciudad" />

        <EditText
            android:id="@+id/Ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Ciudad"
            android:autofillHints="@string/Ciudad"
            android:hint="@string/Ciudad"/>

        <TextView
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userid" />

        <EditText
            android:id="@+id/User_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="@string/userid"
            android:hint="@string/userid"/>

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="Registrar"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/consultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Buscar"
            android:text="@string/consultar_direccion" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Modificar"
            android:text="@string/modificar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Eliminar"
            android:text="@string/eliminar" />

    </LinearLayout>

</LinearLayout>