<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/crud_user"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombres" />


        <EditText
            android:id="@+id/Nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/nombres"
            android:labelFor="@+id/Nom"/>

        <TextView
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidops" />

        <EditText
            android:id="@+id/Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/apellidops"
            android:labelFor="@id/apellidos"
            android:hint="@string/apellidops"/>

        <TextView
            android:id="@+id/Rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rut" />

        <EditText
            android:id="@+id/getrut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/rut"
            android:inputType="number"
            android:labelFor="@id/Rut" />

        <TextView
            android:id="@+id/Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@id/Telefono"
            android:hint="@string/telefono"
            android:autofillHints="@string/telefono"/>

        <TextView
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:labelFor="@id/Correo"
            android:autofillHints="@string/email"/>

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="Registrar"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/consultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="BuscarUsuario"
            android:text="@string/consultar_user" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Eliminar"
            android:text="@string/eliminar" />

    </LinearLayout>

</LinearLayout>