<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MesaIndexActivity"
    android:orientation="vertical"
    android:background="#f58201">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_producto"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Mesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_mesa" />

        <EditText
            android:id="@+id/numeroMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="@string/precio"
            android:hint="@string/numero_mesa"/>

        <TextView
            android:id="@+id/Localid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local" />

        <Spinner
            android:id="@+id/idLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="AddMesa"
            android:text="@string/add_mesa"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>



    </LinearLayout>

</LinearLayout>