<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductoIndexActivity"
    android:orientation="vertical"
    android:background="#f58201">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_producto"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_producto" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/nombre_producto"
            android:hint="@string/nombre_producto" />

        <TextView
            android:id="@+id/Precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio" />

        <EditText
            android:id="@+id/Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="@string/precio"
            android:hint="@string/precio"/>

        <TextView
            android:id="@+id/Localid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="AddProducto"
            android:text="@string/agregar"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/consultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="BuscarProducto"
            android:text="@string/consultar_precio"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>