<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministracionActivity"
    android:orientation="vertical"
    android:background="#f58201">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="ViewLocal"
            android:text="@string/add_local"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="ViewProducto"
            android:text="@string/add_producto"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="ViewUsuario"
            android:text="@string/add_user"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="ViewMesa"
            android:text="@string/add_mesa"
            app:backgroundTint="#282828"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>